examples/test/testpolicy12808.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12808
  namespace: namespace350
spec:
  podSelector:
    matchLabels:
      key25: value38
      key34: value16
      key33: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value30
          key3: value23
          key23: value21
      podSelector:
        matchLabels:
          key43: value41
